# UNIX

Lab1/: 1.tex  script1
Lab2/: qwerty.c  qwertyu
Lab4/: configure.in
Lab4/src/: Makefile  Makefile.in  hello  hello.c
Lab5/src/: server.py
Lab5/src/templates/: index.html
