#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([hello], [0.1], [BUG-REPORT-ADDRESS])
AC_CONFIG_SRCDIR([src/hello.c])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC

AC_CONFIG_FILES([Makefile src/Makefile])


AC_OUTPUT
